[gd_scene load_steps=3 format=1]

[ext_resource path="res://themes/Default.tres" type="Theme" id=1]
[ext_resource path="res://scripts/WeatherFolderSelectScreen.gd" type="Script" id=2]

[node name="WeatherFolderSelectScreen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 984.0
margin/bottom = 560.0
script/script = ExtResource( 2 )

[node name="TitleLabel" type="Label" parent="."]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = -980.0
margin/bottom = 40.0
text = "SELECT_WEATHER_FOLDERS"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OldFolderLabel" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -220.0
margin/top = -200.0
margin/right = -260.0
margin/bottom = -226.0
text = "OLD"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OldFolder" type="LineEdit" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -270.0
margin/top = -200.0
margin/right = -730.0
margin/bottom = -236.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="OldChooseButton" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -740.0
margin/top = -200.0
margin/right = -818.0
margin/bottom = -232.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "CHOOSE"
flat = false

[node name="NewFolderLabel" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -220.0
margin/top = -240.0
margin/right = -260.0
margin/bottom = -266.0
text = "NEW"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NewFolder" type="LineEdit" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -270.0
margin/top = -240.0
margin/right = -730.0
margin/bottom = -276.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="NewChooseButton" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -740.0
margin/top = -240.0
margin/right = -818.0
margin/bottom = -272.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "CHOOSE"
flat = false

[node name="NextButton" type="Button" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -470.0
margin/top = -440.0
margin/right = -526.0
margin/bottom = -472.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "NEXT"
flat = false

[node name="OldWeatherDialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 40.0
margin/right = 1010.0
margin/bottom = 580.0
popup/exclusive = false
window/title = "Open a Directory"
dialog/hide_on_ok = false
mode = 2
access = 2
filters = StringArray(  )
show_hidden_files = false

[node name="NewWeatherDialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 40.0
margin/right = 1010.0
margin/bottom = 580.0
popup/exclusive = false
window/title = "Open a Directory"
dialog/hide_on_ok = false
mode = 2
access = 2
filters = StringArray(  )
show_hidden_files = false

[connection signal="pressed" from="OldChooseButton" to="." method="_on_OldChooseButton_pressed"]

[connection signal="pressed" from="NewChooseButton" to="." method="_on_NewChooseButton_pressed"]

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]

[connection signal="dir_selected" from="OldWeatherDialog" to="." method="_on_OldWeatherDialog_dir_selected"]

[connection signal="dir_selected" from="NewWeatherDialog" to="." method="_on_NewWeatherDialog_dir_selected"]


